--- a/react-bootstrap-usage/index.css
+++ b/react-bootstrap-usage/index.css
@@ -5,11 +5,32 @@ body{
   background-color: rgb(30,30,30);
   color: rgb(209, 209, 209);
 }
+a{
+  text-decoration: none;
+  color: rgb(255,255,255);
+}
 .heading{
+  display: flex;
+  justify-content: center;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: auto;
   font-family: 'Montserrat', Arial, sans-serif;
   text-shadow: 0 0 0.25em #bb9cff;
   user-select: none;
-  white-space: nowrap;
+}
+.hero{
+  display: inline-block;
+  justify-content: center;
+  justify-items: center;
+}
+.step{
+  user-select: none;
+}
+.step-content{}
+.step-ref{
+  display: flex;
+  justify-content: center;
+  font-size:16px;
 }
