--- a/react-bootstrap-usage/index.css
+++ b/react-bootstrap-usage/index.css
@@ -9,7 +9,11 @@ a{
   text-decoration: none;
   color: rgb(255,255,255);
 }
-
+.arrow{
+  background-image: url(./Arrow.png);
+  height: 100px;
+  width: 100px;
+}
     
 .heading{
   display: flex;
