--- a/react-bootstrap-usage/index.css
+++ b/react-bootstrap-usage/index.css
@@ -43,3 +43,9 @@ a{
   display: flex;
   justify-content: center;
 }
+@media screen and (max-width: 768px) {
+  .z1{
+    visibility: hidden;
+    display: none;
+  }
+}
