--- a/react-bootstrap-usage/index.css
+++ b/react-bootstrap-usage/index.css
@@ -9,6 +9,12 @@ a{
   text-decoration: none;
   color: rgb(255,255,255);
 }
+code{
+  margin: 5px 5px;
+  display:inline;
+  text-align: start;
+  color: rgb(209,209,209);
+}
 .arrow{
   background-image: url(./Arrow.png);
   height: 100px;
@@ -38,8 +44,13 @@ a{
 .step-content{
   margin: 0px;
   font-size: 16px;
+  border: 2px solid black;
+  background-color: rgba(50, 50, 50, 0.5);
+  border-radius: 5px;
+  box-shadow: 5px 10px black;
 }
 .step-ref{
+  font-size: 22px;
   display: flex;
   justify-content: center;
 }
@@ -48,4 +59,8 @@ a{
     visibility: hidden;
     display: none;
   }
+}
+.arrowrev{
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
