--- a/base/HTML_CrashCourse/hcc.css
+++ b/base/HTML_CrashCourse/hcc.css
@@ -1,25 +1,45 @@
-:root{
-  --heading-font:32px;
-  --fw-sm: 200;
+:root {
+  --heading-font: 42px;
+  --fw-md: 600;
+  --title-font: 32px;
+  --fw-md: 400;
+  --content-font: 18px;
+  --fw-sm: 100;
   --def-font-family: 'Nunito Sans', sans-serif;
-  --bg-color:rgb(49, 56, 102);
-  --text-color:rgb(254, 123, 229);
-  --accent1:rgb(80, 64, 153);
-  --accent2:rgb(151, 78, 195);
+  --bg-color: rgb(49, 56, 102);
+  --text-color: rgb(254, 123, 229);
+  --accent1: rgb(80, 64, 153);
+  --accent2: rgb(151, 78, 195);
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
   color: var(--text-color);
   background: var(--bg-color);
 }
-a{
+
+a {
   text-decoration: none;
 }
-a:hover{
-  color:var(--accent2);
+
+a:hover {
+  color: var(--accent2);
 }
-.header{
+
+h1 {
+  font-size: var(--title-font);
+  font-weight: var(--fw-md);
+  padding: 2px 10px;
+}
+
+h3 {
+  font-size: var(--content-font);
+  font-weight: var(--fw-sm);
+  padding: 2px 10px;
+}
+
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,64 +49,85 @@ a:hover{
   margin: 1% 5%;
   /* height: 70px; */
 }
-.header > p{
+
+.header>p {
   margin: 10px 0px;
 }
-.container{
+
+.container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 5px;
+  align-items: center;
+  padding: 0px 5px;
   margin: 0;
 }
-section:nth-child(even){
+
+section:nth-child(even) {
   justify-content: start;
+  align-items: center;
   background: var(--accent1);
   padding: 0;
   margin: 0;
   height: 100vh;
 }
-section:nth-child(even) > .container {
-  text-align: left;
+
+section:nth-child(even)>.container {
+  text-align: right;
   background: var(--accent1);
   color: var(--text-color);
   font-size: 36px;
+  height: 100vh;
 }
 
-section:nth-child(odd){
+section:nth-child(odd) {
   justify-content: end;
   background: var(--accent2);
   padding: 0;
   margin: 0;
   height: 100vh;
 }
-section:nth-child(odd) > .container {
-  text-align: right;
+
+section:nth-child(odd)>.container {
+  text-align: left;
   background: var(--accent2);
   color: var(--bg-color);
   font-size: 36px;
+  height: 100vh;
 }
 
-.footer{
+.footer {
   display: flex;
   height: 10vh;
   justify-content: center;
   text-align: center;
   align-items: center;
 }
-.row{
-  width: 50%;
+
+.footer>.container {
+  height: 10vh;
+  padding: 0;
+  display: flex;
 }
-@media (width < 768px){
-  .container{
+
+.row {
+  width: 50%;
+  height: 90%;
+}
+
+@media (width < 768px) {
+  .container {
     display: block;
-    padding: 15px;
+    padding: 11% 5px 0px 5px;
   }
-  .row{
+
+  .row {
     width: 100%;
     text-align: center;
+    height: 45vh;
   }
 }
-body::-webkit-scrollbar{
+
+body::-webkit-scrollbar {
   display: none;
 }
