--- a/base/react-bootstrap-usage/react-bootstrap-usage.css
+++ b/base/react-bootstrap-usage/react-bootstrap-usage.css
@@ -1,66 +1,89 @@
-body{
+body {
+  /* width: 100vw; */
   margin: 0;
-  padding: 0;
+  padding: 0px 200px;
   font-size: 24px;
-  background-color: rgb(30,30,30);
+  background-color: rgb(40, 40, 40);
   color: rgb(209, 209, 209);
 }
-a{
+
+a {
   text-decoration: none;
-  color: rgb(255,255,255);
+  color: rgb(255, 255, 255);
 }
-code{
+
+code {
   margin: 5px 5px;
-  display:inline;
+  display: inline;
   text-align: start;
-  color: rgb(209,209,209);
+  color: rgb(209, 209, 209);
 }
-.arrow{
+
+.arrow {
   background-image: url(./Arrow.png);
   height: 100px;
   width: 100px;
 }
-    
-.heading{
+
+.heading {
   display: flex;
   justify-content: center;
   margin: 0;
-  padding: 0;
+  padding: 10px 0px;
   width: 100%;
   height: auto;
   font-family: 'Montserrat', Arial, sans-serif;
   text-shadow: 0 0 0.25em #bb9cff;
   user-select: none;
 }
-.hero{
+
+.hero {
   display: inline-block;
   justify-content: center;
   justify-items: center;
 }
-.step{
+
+.step {
   user-select: none;
   font-size: 20px;
 }
-.step-content{
+
+.step-content {
+  padding: 5px;
   margin: 0px;
   font-size: 16px;
   border: 2px solid black;
-  background-color: rgba(50, 50, 50, 0.5);
+  background-color: rgb(50, 50, 50);
   border-radius: 5px;
-  box-shadow: 5px 10px black;
+  box-shadow: 5px 10px rgb(20, 20, 20);
 }
-.step-ref{
+
+.step-ref {
   font-size: 22px;
   display: flex;
   justify-content: center;
 }
-@media screen and (max-width: 768px) {
-  .z1{
+
+@media screen and (width< 1024px) {
+  body {
+    padding: 0px 100px
+  }
+}
+
+@media screen and (width< 768px) {
+  .z1 {
     visibility: hidden;
     display: none;
   }
+
+  body {
+    padding: 0px 10px;
+  }
 }
-.arrowrev{
+
+
+
+.arrowrev {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
 }
